code/tui/snapshots/fullscreen/guardian/guardian_history_scope_coverage.snap
---
source: code/tui/src/app/guardian_tests.rs
expression: frame
---
  .                                                                [Dashboard]  
                                                                                
        ┌── Guardian ──────────────────────────────────────────────[✗]─┐        
        │                                                              │        
        │  /project                                                    │        
        │  Scan project…                                             + │        
        │  Save reviewed background                                  + │        
        │  curl                              Unconfirmed observation + │        
        │  Include recent project sessions                   Enabled + │        
        │  Session limit                                         100 + │        
        │  Commands per session                                  500 + │        
        │  Time range                                             30 + │        
        │> History scan coverage                                     - │        
        │    Scanned 50/60 sessions, 1000/2000 commands; kept 40/80    │        
        │    facts. Budgets can leave coverage partial.                │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
  ──────│  Enter confirm · ←/→ details · Esc close                     │──────  
  > Buil└──────────────────────────────────────────────────────────────┘        
  ─────────────────────────────────────────────────────────── Automatic model
